more tutorial stuff

--- a/redshift.ipynb
+++ b/redshift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "handed-night",
    "metadata": {},
    "outputs": [],
@@ -14,8 +14,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "organized-favorite",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.cosmology import FlatLambdaCDM\n",
+    "import astropy.units as u"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "based-fighter",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cosmo = FlatLambdaCDM(H0=70*u.km/u.s/u.Mpc, Om0=0.3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "minus-result",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "zvals = np.arange(0, 6, 0.1)\n",
+    "dist = cosmo.angular_diameter_distance(zvals)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "tested-commons",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "disciplinary-sitting",
    "metadata": {},
    "outputs": [],
    "source": []
