--- a/redshift.ipynb
+++ b/redshift.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "handed-night",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "organized-favorite",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "based-fighter",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "minus-result",
    "metadata": {},
    "outputs": [],
@@ -47,17 +47,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "tested-commons",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f15dac47950>]"
+       "[<matplotlib.lines.Line2D at 0x7f59740d8cd0>]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "disciplinary-sitting",
    "metadata": {},
    "outputs": [],
@@ -92,8 +92,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "alike-tourism",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from astropy.cosmology import z_at_value\n",
+    "ageticks = [z_at_value(cosmo.age, age) for age in ages]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "perceived-enemy",
    "metadata": {},
    "outputs": [],
    "source": []
