get data from h5 to gpu

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -2,17 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "id": "cross-abuse",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import blimpy"
+    "import blimpy\n",
+    "import h5py\n",
+    "import cupy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "coupled-compact",
    "metadata": {},
    "outputs": [],
@@ -22,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "federal-compact",
    "metadata": {},
    "outputs": [
@@ -32,7 +34,7 @@
        "13690.115"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "empty-europe",
    "metadata": {},
    "outputs": [],
@@ -55,30 +57,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "id": "forty-photographer",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "13690.115"
+       "(16, 1, 67108864)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "f = h5py.File(FILENAME, \"r\")\n",
-    "f[\"data\"][5][0][30]"
+    "data = f[\"data\"]\n",
+    "data.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "adolescent-coordination",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16, 200)"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sub = data[:, 0, :200]\n",
+    "sub.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "incomplete-steel",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(16, 200)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c = cupy.asarray(sub)\n",
+    "c.shape"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "solved-delhi",
+   "id": "automatic-curtis",
    "metadata": {},
    "outputs": [],
    "source": []
