--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb57ce45bb0>"
+       "<matplotlib.image.AxesImage at 0x7eff08470af0>"
       ]
      },
      "execution_count": 5,
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "minor-dimension",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
        " 'za_start': 0.0}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "varied-western",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
        "(6815.15966796875, 5737905664.0)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "id": "civic-military",
    "metadata": {},
    "outputs": [],
@@ -194,17 +194,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "furnished-establishment",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb57c3c2160>"
+       "<matplotlib.image.AxesImage at 0x7eff0835d1f0>"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 11,
    "id": "saving-question",
    "metadata": {},
    "outputs": [
@@ -238,7 +238,7 @@
        "       2.8984457e-06, 3.0688832e-06], dtype=float32)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 12,
    "id": "hollywood-reaction",
    "metadata": {},
    "outputs": [],
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "id": "contained-reputation",
    "metadata": {},
    "outputs": [
@@ -269,7 +269,7 @@
        "array([0, 0, 0, ..., 0, 0, 0])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,17 +280,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "wrapped-mambo",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fb57c395700>"
+       "<matplotlib.image.AxesImage at 0x7eff082b6520>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -313,8 +313,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "superior-playing",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 524288, 1572864, 2621440, 3670016, 4718592, 5767168, 6815744,\n",
+       "       7864320, 8912896, 9961472])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nz = cupy.nonzero(cupy.amax(inorm, axis=0))[0]\n",
+    "nz"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sublime-proposition",
    "metadata": {},
    "outputs": [],
    "source": []
