--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -84,7 +84,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3b61030be0>"
+       "<matplotlib.image.AxesImage at 0x7f6731ea6b50>"
       ]
      },
      "execution_count": 5,
@@ -155,27 +155,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "civic-military",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normalizing to 0.0 - 5335657.0 range\n"
+     ]
+    }
+   ],
    "source": [
-    "norm = (c[:, :10000000] - cmin) / (cmax - cmin)"
+    "def normalize(arr):\n",
+    "    amax = cupy.amax(arr).item()\n",
+    "    amin = cupy.amin(arr).item()\n",
+    "    print(f\"normalizing to {amin} - {amax} range\")\n",
+    "    return (arr - amin) / (amax - amin)\n",
+    "    \n",
+    "trunc = c[:, :10000000]\n",
+    "norm = normalize(trunc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "id": "furnished-establishment",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3b607e8340>"
+       "<matplotlib.image.AxesImage at 0x7f6730a1c0d0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -198,18 +213,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "saving-question",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([1.4659731e-06, 7.9528195e-07, 5.2919120e-07, ..., 2.9917176e-06,\n",
-       "       2.8984457e-06, 3.0688832e-06], dtype=float32)"
+       "array([0.00285377, 0.00213252, 0.00184637, ..., 0.00449454, 0.00439424,\n",
+       "       0.00457752], dtype=float32)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,10 +235,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "id": "hollywood-reaction",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "OutOfMemoryError",
+     "evalue": "Out of memory allocating 1,280,000,000 bytes (allocated so far: 7,494,973,952 bytes).",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mOutOfMemoryError\u001b[0m                          Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-20-370b3d4dd8e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minorm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnorm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32mcupy/core/core.pyx\u001b[0m in \u001b[0;36mcupy.core.core.ndarray.astype\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mcupy/core/core.pyx\u001b[0m in \u001b[0;36mcupy.core.core.ndarray.astype\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mcupy/core/core.pyx\u001b[0m in \u001b[0;36mcupy.core.core.ndarray.__init__\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.alloc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.MemoryPool.malloc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.MemoryPool.malloc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.SingleDeviceMemoryPool.malloc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.SingleDeviceMemoryPool._malloc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.SingleDeviceMemoryPool._try_malloc\u001b[0;34m()\u001b[0m\n",
+      "\u001b[0;31mOutOfMemoryError\u001b[0m: Out of memory allocating 1,280,000,000 bytes (allocated so far: 7,494,973,952 bytes)."
+     ]
+    }
+   ],
    "source": [
     "inorm = (norm * 100).astype(int)"
    ]
@@ -253,18 +289,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "sublime-proposition",
    "metadata": {},
    "outputs": [],
    "source": [
+    "t\n",
     "for i in nz: c[:, i] *= 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "tested-fitness",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(0.0, 5737905664.0)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cmax = cupy.amax(c).item()\n",
+    "cmin = cupy.amin(c).item()\n",
+    "cmin, cmax"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "dominican-athletics",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(0., dtype=float32)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c[0, 524288]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "portuguese-pennsylvania",
    "metadata": {},
    "outputs": [],
    "source": []
