--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd10d48cac0>"
+       "<matplotlib.image.AxesImage at 0x7fd85ace7b80>"
       ]
      },
      "execution_count": 4,
@@ -143,7 +143,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd10cc41340>"
+       "<matplotlib.image.AxesImage at 0x7fd85a49f670>"
       ]
      },
      "execution_count": 8,
@@ -241,7 +241,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7fd104d04a90>"
+       "<matplotlib.image.AxesImage at 0x7fd85a3f7940>"
       ]
      },
      "execution_count": 13,
@@ -267,8 +267,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "sealed-sympathy",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "normalizing to 0.0 - 5335657.0 range\n"
+     ]
+    }
+   ],
+   "source": [
+    "norm2 = normalize(trunc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "subtle-honor",
    "metadata": {},
    "outputs": [],
    "source": []
