--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f4816543af0>"
+       "<matplotlib.image.AxesImage at 0x7f93a433cb80>"
       ]
      },
      "execution_count": 4,
@@ -96,7 +96,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "c = cupy.asarray(data[:, 0, :])"
+    "c = cupy.asarray(data[:, 0, :10_000_000])"
    ]
   },
   {
@@ -130,8 +130,7 @@
     "    print(f\"normalizing to {amin} - {amax} range\")\n",
     "    return (arr - amin) / (amax - amin)\n",
     "    \n",
-    "trunc = c[:, :10000000]\n",
-    "norm = normalize(trunc)"
+    "norm = normalize(c)"
    ]
   },
   {
@@ -143,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f481642c8e0>"
+       "<matplotlib.image.AxesImage at 0x7f93a4228370>"
       ]
      },
      "execution_count": 8,
@@ -224,27 +223,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "sublime-proposition",
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in nz: trunc[:, i] *= 0"
+    "no_spikes = cupy.copy(c)\n",
+    "for i in nz: no_spikes[:, i] *= 0"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "portuguese-pennsylvania",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f4816406e50>"
+       "<matplotlib.image.AxesImage at 0x7f93a410aa60>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -262,12 +262,12 @@
     }
    ],
    "source": [
-    "plt.imshow(trunc[:, :100].get())"
+    "plt.imshow(no_spikes[:, :100].get())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "sealed-sympathy",
    "metadata": {},
    "outputs": [
@@ -280,7 +280,7 @@
     }
    ],
    "source": [
-    "norm = normalize(trunc)"
+    "norm = normalize(no_spikes)"
    ]
   },
   {
@@ -288,28 +288,7 @@
    "execution_count": 16,
    "id": "subtle-honor",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "OutOfMemoryError",
-     "evalue": "Out of memory allocating 1,280,000,000 bytes (allocated so far: 7,494,973,952 bytes).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mOutOfMemoryError\u001b[0m                          Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-16-370b3d4dd8e9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0minorm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mnorm\u001b[0m \u001b[0;34m*\u001b[0m \u001b[0;36m100\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mastype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32mcupy/core/core.pyx\u001b[0m in \u001b[0;36mcupy.core.core.ndarray.astype\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mcupy/core/core.pyx\u001b[0m in \u001b[0;36mcupy.core.core.ndarray.astype\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mcupy/core/core.pyx\u001b[0m in \u001b[0;36mcupy.core.core.ndarray.__init__\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.alloc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.MemoryPool.malloc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.MemoryPool.malloc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.SingleDeviceMemoryPool.malloc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.SingleDeviceMemoryPool._malloc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32mcupy/cuda/memory.pyx\u001b[0m in \u001b[0;36mcupy.cuda.memory.SingleDeviceMemoryPool._try_malloc\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;31mOutOfMemoryError\u001b[0m: Out of memory allocating 1,280,000,000 bytes (allocated so far: 7,494,973,952 bytes)."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "inorm = (norm * 100).astype(int)"
    ]
