nonzero regions, rather than spikes

--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -63,7 +63,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f93a433cb80>"
+       "<matplotlib.image.AxesImage at 0x7ff80aa33af0>"
       ]
      },
      "execution_count": 4,
@@ -142,7 +142,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f93a4228370>"
+       "<matplotlib.image.AxesImage at 0x7ff80a1e62e0>"
       ]
      },
      "execution_count": 8,
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "sublime-proposition",
    "metadata": {},
    "outputs": [],
@@ -234,17 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "portuguese-pennsylvania",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f93a410aa60>"
+       "<matplotlib.image.AxesImage at 0x7ff80a1409d0>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "sealed-sympathy",
    "metadata": {},
    "outputs": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "subtle-honor",
    "metadata": {},
    "outputs": [],
@@ -295,8 +295,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "moral-swedish",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 509003,  509004,  509005,  509006,  523598,  523723,  523724,\n",
+       "        523849,  523850,  523974,  523975,  524099,  524100,  524104,\n",
+       "        524105,  524221,  524222,  524223,  524224,  524225,  524226,\n",
+       "        524227,  524228,  524229,  524230,  524346,  524347,  524348,\n",
+       "        524349,  524350,  524351,  524352,  524353,  524354,  524355,\n",
+       "        524471,  524472,  524475,  524476,  524477,  524601,  524602,\n",
+       "        524726,  524727,  524852,  532382,  532390,  539814,  539815,\n",
+       "        539824,  539825,  539830,  539833,  541278,  541279,  541280,\n",
+       "        541281,  541282,  541283,  541284,  541286,  541287,  541288,\n",
+       "        541289,  541290,  541291,  541292, 4997696, 4998212, 4998213,\n",
+       "       5000595, 5000596, 5000597, 5000599, 5000600, 5000601, 5000602,\n",
+       "       5000603, 5000604, 5000605, 5000606, 5013820, 5013822, 5013823,\n",
+       "       5013824, 5013825, 5013826, 5013827, 5013828, 5013829, 5013831])"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cupy.nonzero(cupy.amax(inorm, axis=0))[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "noticed-metallic",
    "metadata": {},
    "outputs": [],
    "source": []
