--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -17,16 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "coupled-compact",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "FILENAME = \"data/blc41_guppi_59103_01372_PSR_B2021+51_0009.rawspec.0000.h5\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
    "id": "forty-photographer",
    "metadata": {},
    "outputs": [
@@ -36,12 +26,13 @@
        "(16, 1, 67108864)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "FILENAME = \"data/blc41_guppi_59103_01372_PSR_B2021+51_0009.rawspec.0000.h5\"\n",
     "f = h5py.File(FILENAME, \"r\")\n",
     "data = f[\"data\"]\n",
     "data.shape"
@@ -49,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "incomplete-steel",
    "metadata": {},
    "outputs": [
@@ -63,10 +54,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f87125faaf0>"
+       "<matplotlib.image.AxesImage at 0x7f7e6c063bb0>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -91,27 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "searching-working",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c = cupy.asarray(data[:, 0, :10_000_000])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "minor-dimension",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# dict(data.attrs)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "civic-military",
    "metadata": {},
    "outputs": [
@@ -130,22 +101,23 @@
     "    print(f\"normalizing to {amin} - {amax} range\")\n",
     "    return (arr - amin) / (amax - amin)\n",
     "    \n",
+    "c = cupy.asarray(data[:, 0, :10_000_000])\n",
     "norm = normalize(c)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "furnished-establishment",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f8711db34c0>"
+       "<matplotlib.image.AxesImage at 0x7f7e665ef220>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -168,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "saving-question",
    "metadata": {},
    "outputs": [
@@ -179,7 +151,7 @@
        "       2.9103091e-06, 3.0839587e-06], dtype=float32)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -190,17 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "hollywood-reaction",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inorm = (norm * 100).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "superior-playing",
    "metadata": {},
    "outputs": [
@@ -211,40 +173,30 @@
        "       7864320, 8912896, 9961472])"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "inorm = (norm * 100).astype(int)\n",
     "nz = cupy.nonzero(cupy.amax(inorm, axis=0))[0]\n",
     "nz"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "sublime-proposition",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "no_spikes = cupy.copy(c)\n",
-    "for i in nz: no_spikes[:, i] *= 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "portuguese-pennsylvania",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f8711d0dca0>"
+       "<matplotlib.image.AxesImage at 0x7f7e665c6c10>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -262,12 +214,15 @@
     }
    ],
    "source": [
+    "no_spikes = cupy.copy(c)\n",
+    "for i in nz:\n",
+    "    no_spikes[:, i] *= 0\n",
     "plt.imshow(no_spikes[:, :100].get())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "id": "sealed-sympathy",
    "metadata": {},
    "outputs": [
@@ -285,17 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "subtle-honor",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "inorm = (norm * 100).astype(int)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "id": "moral-swedish",
    "metadata": {},
    "outputs": [
@@ -317,18 +262,19 @@
        "       5013824, 5013825, 5013826, 5013827, 5013828, 5013829, 5013831])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "inorm = (norm * 100).astype(int)\n",
     "cupy.nonzero(cupy.amax(inorm, axis=0))[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "id": "noticed-metallic",
    "metadata": {},
    "outputs": [],
@@ -339,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "existing-cleaner",
    "metadata": {},
    "outputs": [
@@ -362,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 13,
    "id": "scheduled-investor",
    "metadata": {},
    "outputs": [
@@ -385,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "id": "crazy-beast",
    "metadata": {},
    "outputs": [
@@ -408,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "variable-haiti",
    "metadata": {},
    "outputs": [
@@ -431,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 16,
    "id": "headed-wrestling",
    "metadata": {},
    "outputs": [
@@ -454,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 17,
    "id": "adequate-chocolate",
    "metadata": {},
    "outputs": [
@@ -477,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 18,
    "id": "athletic-function",
    "metadata": {},
    "outputs": [
