--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3b891feb80>"
+       "<matplotlib.image.AxesImage at 0x7f3db8827be0>"
       ]
      },
      "execution_count": 3,
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3b889b7490>"
+       "<matplotlib.image.AxesImage at 0x7f3db87156a0>"
       ]
      },
      "execution_count": 5,
@@ -193,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3b8891c190>"
+       "<matplotlib.image.AxesImage at 0x7f3db86edfd0>"
       ]
      },
      "execution_count": 8,
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "id": "oriented-spring",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "[509003, 523598, 524601, 532382, 539814, 541278, 4997696, 5000595, 5013820]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,6 +307,8 @@
     "    if spaced and spaced[-1] + 1000 > loc:\n",
     "        continue\n",
     "    spaced.append(loc)\n",
+    "def ss(i):\n",
+    "    show(spaced[i])\n",
     "spaced"
    ]
   },
@@ -427,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "id": "labeled-pursuit",
    "metadata": {},
    "outputs": [
@@ -450,7 +452,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "id": "similar-renaissance",
    "metadata": {},
    "outputs": [
@@ -473,7 +475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "id": "binary-tulsa",
    "metadata": {},
    "outputs": [
@@ -496,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "id": "tender-engagement",
    "metadata": {},
    "outputs": [
