--- a/analyze.ipynb
+++ b/analyze.ipynb
@@ -54,7 +54,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3db8827be0>"
+       "<matplotlib.image.AxesImage at 0x7f6fb5df6bb0>"
       ]
      },
      "execution_count": 3,
@@ -114,7 +114,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3db87156a0>"
+       "<matplotlib.image.AxesImage at 0x7f6fb55b2400>"
       ]
      },
      "execution_count": 5,
@@ -193,7 +193,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f3db86edfd0>"
+       "<matplotlib.image.AxesImage at 0x7f6fb5588e20>"
       ]
      },
      "execution_count": 8,
@@ -286,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 12,
    "id": "oriented-spring",
    "metadata": {},
    "outputs": [
@@ -296,7 +296,7 @@
        "[509003, 523598, 524601, 532382, 539814, 541278, 4997696, 5000595, 5013820]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
